<resources>
    <string name="app_name">你的声音</string>

    <!--登录-->
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="no_userid_reg">还没有账户？注册。</string>
    <string name="login_success">登录成功</string>
    <string name="rest_password">找回密码</string>

    <!--注册-->
    <string name="register_in_normal">用户注册</string>
    <string name="register_normal_useraccount_hint">请输入你的手机号</string>
    <string name="register_normal_email">用户名</string>
    <string name="register_normal_email_hint">请输入用户名</string>
    <string name="register_normal_password">密码</string>
    <string name="register_normal_repassword">确认密码</string>
    <string name="register_normal_repassword_hint">请输入确认密码</string>
    <string name="password_6_20">6-20位密码,包含数字和字母</string>
    <string name="register_success">注册成功</string>
    <string name="have_userid">已经有账户了？登录。</string>

    <!--找回密码-->
    <string name="registerinfo">输入手机号后，点击"获取验证码"，系统会自动向你的手机发送一条短信</string>
    <string name="register_tip">【提示】\n 1.使用手机号免费获取验证码 \n 2.此手机号用来登录调查app\n 3.你可以获取验证码短信后选择输入验证码进行下一步的操作</string>
    <string name="getverifyindo">输入验证码后，点击"进行验证"，系统会自动进行验证</string>
    <string name="getverify_tip">【提示】\n 1.在输入验证码的前提是通过使用手机号获取验证码 \n 2.此验证码用来验证是否是调查app的用户\n 3.系统根据输入的验证码进行下一步的操作</string>
    <string name="getpwdindo">请在此页面重新设置密码</string>
    <string name="getpwd_tip">【提示】\n 1.在输入验证码验证成功的前提下才会进入此页面 \n 2.用户需要重新设置自己的密码\n 3.系统根据输入的密码判断是否合法，如果合法此密码修改成功</string>
    <string name="reset_success">密码修改成功</string>
    <string name="verify">验证码</string>
    <string name="get_verify">获取验证码</string>

    <!--个人页面-->
    <string name="personal_title">个人中心</string>
    <string name="personal_more">设置</string>
    <string name="personal_order_center">订单中心</string>
    <string name="personal_welcome">欢迎来到调查app</string>
    <string name="personal_login">登录</string>
    <string name="personal_fast_search">我的调查</string>
    <string name="personal_wait_pay">待付款订单</string>
    <string name="personal_all_order">我的参与</string>
    <string name="personal_account_center">个人中心</string>
    <string name="personal_my_focus">我的关注</string>
    <string name="personal_comment">个人信息修改</string>
    <string name="personal_information">消息中心</string>
    <string name="personal_quick_buy">轻松购</string>
    <string name="personal_account">切换账号</string>
    <string name="personal_return_back">关于</string>
    <string name="personal_customer_service">客户服务</string>
    <string name="personal_infomation_service">帮助与反馈</string>
    <string name="personal_quit">退出</string>
    <string name="personal_about">关于</string>
    <string name="personal_about_info">
        调查app主要功能包括调查发起，调查提交，词云展示的功能。用户可以发起调查，也可以参与到调查中去，
        为其他人的相关调查提供一份数据。</string>
    <string name="personal_help">帮助与反馈</string>
    <string name="question_one">1.如何进行调查发起？</string>
    <string name="answer_one">
        方式一：进入首页后，点击下面的“调查”按钮进入调查页面后右上角有一个"发布调查"的按钮，点击即可进行调查的发布\n方式二：进入个人中心，点击我的调查即可进行发布</string>
    <string name="question_two">2.如何参与调查？</string>
    <string name="answer_two">
        方式一：进入首页后，点击其中的某一个调查主题进入之后点击"参与调查"按钮进入参与页面后即可进行调查的参与</string>
    <string name="question_three">3.如何停止调查？</string>
    <string name="answer_three">
        方式一：进入调查页面后，点击其中的某一个调查主题进入之后点击"结束调查"按钮即可结束此次调查</string>
    <string name="personal_message">消息中心</string>
    <string name="empty_crime_set">没有记录可以显示</string>
    <string name="person_update">个人信息修改</string>

    <!--首页-->
    <string name="load_more_before">加载更多</string>
    <string name="load_more">正在加载&#8230;</string>
    <string name="load_more_complete">已经到达底部了</string>
    <string name="index_search_edit_hint">搜索调查主题</string>
    <string name="search_info">暂无搜索历史</string>
    <string name="personal_search">返回</string>
    <string name="home_search_name"></string>

    <!--发布调查-->
    <string name="submit_search_hint">请输入调查主题</string>
    <string name="submit_search_more">请输入具体描述</string>

    <!--参与调查-->
    <string name="join_search_key1">请输入关键词1</string>
    <string name="join_search_key2">请输入关键词2</string>
    <string name="join_search_key3">请输入关键词3</string>
    <string name="join_search_key4">请输入其他答案</string>
    <string name="joinsearch_tip">【提示】\n 1.关键词主要用于参与者进行选择 \n 2.关键词的字数有限制，限制在5个汉字之内\n 3.备注中填写关于
        此调查的补充说明。</string>

    <!--发布调查-->
    <string name="submitsearch_tip">【提示】\n 1.可以选择多个答案 \n 2.其他可以填写一些未出现的答案，并且其字数有限制，限制在5个汉字之内\n </string>


    <string name="click_back">点我返回。</string>
    <string name="network_error">网络出了一点问题</string>
    <string name="sport">shouy</string>
    <string name="wechat_pay">微信支付</string>
    <string name="wechat">微信</string>
    <string name="chat">聊天</string>
    <string name="constacts">通讯录</string>
    <string name="me">我</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="my_group">我的群组</string>
    <string name="focus">关注</string>
    <string name="hot">热门</string>
    <string name="setting">设置</string>
    <string name="proceed">进行中</string>
    <string name="settle">待结算</string>
    <string name="evaluation">待评价</string>
    <string name="all_record">全部记录</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zu_quyu">类型</string>
    <string name="zu_money">排序</string>
    <string name="zu_huxing">户型</string>
    <string name="zu_laiyuan">来源</string>
</resources>
