<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/android_layout_bg"
    tools:context=".person.ResetActivity">
    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/rest_password"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:text="@string/getpwdindo"
            android:textColor="@color/goldyellow"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_normal_password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="35dp"
            android:hint="@string/password_6_20"
            android:inputType="textPassword"
            android:background="@drawable/category_selection_gridview_bg"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_normal_repassword"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_register_password_again"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/register_normal_repassword_hint"
            android:inputType="textPassword"
            android:background="@drawable/category_selection_gridview_bg"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_reset_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/register_btn_bg"
        android:gravity="center"
        android:text="确认修改"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:paddingTop="20dp"-->
        <!--android:paddingRight="10dp"-->
        <!--android:text="@string/registerinfo"-->
        <!--android:textColor="@color/goldyellow"-->
        <!--android:textSize="12sp" />-->

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@drawable/category_selection_gridview_bg" >-->

        <!--<EditText-->
            <!--android:id="@+id/et_reset_phone"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:hint="请输入你的手机号"-->
            <!--android:inputType="number"-->
            <!--android:background="@null"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--/>-->

    <!--</LinearLayout>-->
<!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:layout_gravity="center_horizontal">-->
    <!--<TextView-->
        <!--android:id="@+id/tv_reset_verify"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@drawable/register_btn_bg"-->
        <!--android:gravity="center"-->
        <!--android:text="获取验证码"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="16sp" />-->
<!--</LinearLayout>-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="20dp"
        android:layout_margin="10dp"
        android:text="@string/getpwd_tip"
        android:textSize="15sp"
        android:textColor="#9b7e33" />
    <TextView
        android:id="@+id/tv_reset_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/register_btn_bg"
        android:gravity="center"
        android:text="回到登录页面"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>