<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/index_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/index_top_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/android_search_icon" />

        <EditText
            android:id="@+id/index_search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/search_box"
            android:hint="@string/index_search_edit_hint"
            android:padding="6dp"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/micro_text_size" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/SearchCityStoreTopView"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:background="@color/zu_choose_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvZuQuyu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/zu_quyu"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvZuQuyupaixu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zu_money"
            android:textColor="@color/white" />

        <!--<TextView-->
            <!--android:id="@+id/tvZuQuyu"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/zu_huxing"-->
            <!--android:textColor="@color/white" />-->

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/zu_laiyuan"-->
            <!--android:textColor="@color/white" />-->
    </LinearLayout>

    <com.example.lenovo.searchapp.view.AutoSwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="78dp">

        <com.example.lenovo.searchapp.view.LoadRecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.example.lenovo.searchapp.view.AutoSwipeRefreshLayout>

</RelativeLayout>
